--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h3>Blueimp Wistia Upload</h3>
+          <h3>Angular JS upload Component to WISTIA</h3>
           <!-- DIRECTIVE IN ACTION  -->
           <uploadfile id="fileupload" wistiapass="1eb31cc7a43b3c6549e449ab9c862f97b60a008d734500f9d1204a266f178110" />
         </div>
